# pyRest

./: .envrc  .flaskenv  .gitignore  config.py  pyproject.toml  requirements.txt  shareCoupon.py  shell.nix.cha
webapi/: __init__.py  auth_route.py  coupon_route.py  users.py  users_route.py  views_route.py
webapi/controls/: authCtl.py  couponCtl.py  globalTools.py
webapi/models/: users.py
website/: __init__.py  auth.py  views.py
website/models/: __init__.py  users.py
website/static/: mytable.css  tools.js
website/templates/: base.html  dashboard.html  home.html  login.html  logout.html  signup.html
